--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-ga": "^3.3.1",
     "react-google-charts": "^4.0.1",
     "react-i18next": "^14.1.1",
+    "react-icons": "^5.3.0",
     "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
