--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -22,5 +23,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Serve config
+serve.json
 
 server/db.sqlite3
