--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name mumbaiflood.in www.mumbaiflood.in;
     
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN";
