--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
-    "i18next": "^23.11.4",
+    "axios": "^1.7.2",
+    "i18next": "^23.11.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.396.0",
     "react": "^18.3.1",
@@ -15,10 +15,10 @@
     "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
     "react-google-charts": "^4.0.1",
-    "react-i18next": "^14.1.1",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.3.0",
     "react-leaflet-cluster": "^2.1.0",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -27,16 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src --ext .js,.jsx",
-    "lint:fix": "eslint src --ext .js,.jsx --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,css,scss,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,css,scss,md}\""
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -51,12 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
